--- a/package.json
+++ b/package.json
@@ -21,5 +21,18 @@
     "typescript": "^5.7.2",
     "vite": "^5.3.1",
     "@vitejs/plugin-react": "^4.2.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pslab-nitw/pslab-nitw-website.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pslab-nitw/pslab-nitw-website/issues"
+  },
+  "homepage": "https://github.com/pslab-nitw/pslab-nitw-website#readme"
 }
